<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/main_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/main_background" />

    <LinearLayout
        android:id="@+id/startLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/startLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="25dp"
                android:paddingRight="25dp">

                <LinearLayout
                    android:id="@+id/startLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/line1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/play_btn"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_stroke_black95_press_white"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/play"
                            android:textAllCaps="false"
                            android:textColor="@color/black95"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/my_collection_btn"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_stroke_black95_press_white"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/my_collection"
                            android:textAllCaps="false"
                            android:textColor="@color/black95"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/shop_btn"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_stroke_black95_press_white"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/shop"
                            android:textAllCaps="false"
                            android:textColor="@color/black95"
                            android:textSize="24dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/line4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/open_packs_btn"
                            android:layout_width="250dp"
                            android:layout_height="wrap_content"
                            android:background="@drawable/button_stroke_black95_press_white"
                            android:paddingLeft="10dp"
                            android:paddingRight="10dp"
                            android:text="@string/open_packs"
                            android:textAllCaps="false"
                            android:textColor="@color/black95"
                            android:textSize="24dp" />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

            <LinearLayout
                android:id="@+id/startLayout6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/startLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/settings_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_stroke_black95_press_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Instruction"
                        android:textAllCaps="false"
                        android:textColor="@color/black95"
                        android:textSize="16dp" />

                    <Button
                        android:id="@+id/friends_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_stroke_black95_press_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/friends"
                        android:textAllCaps="false"
                        android:textColor="@color/black95"
                        android:textSize="16dp" />

                    <Button
                        android:id="@+id/quests_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/button_stroke_black95_press_white"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/Quests"
                        android:textAllCaps="false"
                        android:textColor="@color/black95"
                        android:textSize="16dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/startLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="right"
                    android:orientation="horizontal"
                    android:paddingRight="25dp">

                    <TextView
                        android:id="@+id/gold_text"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|right"
                        android:background="@drawable/button_stroke_black95_press_white"
                        android:gravity="right"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/gold"
                        android:textAllCaps="false"
                        android:textColor="@color/black95"
                        android:textSize="16dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>